$NetBSD: CHANGELOG,v 1.1 1998/08/07 22:13:43 tsarna Exp $

TODO
	- report line# for each errors/warnings in Makefile
	  (need a complete rewrite)

---

r1.66 Thu Aug 20 09:00:51 CDT 1998
	- Add support for HOMEPAGE

r1.65 Fri Aug  7 14:43:24 CDT 1998
	- Rename to pkglint
	- apply patches to sources and keep files under ${FILESDIR}.
	  We're diverged too much to share this well, so we might as
	  well keep the sources in-tree and under CVS control.

r1.64 Sat Feb 28 11:34:13 JST 1998
	- manpage checks (Hubert Feyrer)
	- FreeBSD/NetBSD support (Hubert Feyrer)
	- PKGNAME check for packages/Latest (satoshi)

r1.63 Mon Jan 19 10:27:11 JST 1998
	- install-info related fix (thanks satoshi)
	- display RCS tag in patches/* (thanks goes to Hubert Feyrer, for the
	  rest of the items)
	- RCS tag is configurable
	- PORTSDIR (/usr/ports) is configurable
	- extra colon in URL
	- USE_GMAKE

r1.62 Thu Dec 18 12:36:09 JST 1997
	- info/dir should not be listed in pkg/PLIST. (thanks satoshi)

r1.61 Tue Nov 25 20:41:55 JST 1997
	- checks improved for comments in Makefile.
	- add check for PKG_DIST_STRIP. (thanks satoshi)

r1.60 Thu Nov 20 12:20:41 JST 1997
	- show the line # on check for contiguous blank lines (thanks goes to
	  fenner@freebsd)
	- *_DEPENDS ordering check improved (thanks satoshi)

r1.59 Thu Nov 13 22:29:30 JST 1997
	- "-B #" allowed as well as "-B#"
	- pkg/COMMENT has to be 70 chars (previously, check was for 80 chars)
	- EXTRACT_SUFX unnecessery if DISTFILES is defined.
	  (thanks sheldonh@axl.iafrica.com)

r1.58 Tue Nov 11 09:05:16 JST 1997
	- option -B#: set # of contiguous blank lines allowed
	- warn on distfile improved (to some extent)
	- Id string check improved.

r1.57 Sun Nov  9 09:28:54 JST 1997
	- fixed RCS ident string check (Id, History and others)
	- blank lines check (thanks goes to obrien@nuxi.com)

r1.56 Wed Nov  5 11:10:56 JST 1997
	- warn for emacs backup file (committers mode)
	- warn for *.orig and *.rej (committers mode)
