@@ -1,10 +1,13 @@
-$NetBSD: CHANGELOG,v 1.1 1998/08/07 22:13:43 tsarna Exp $
+$NetBSD: CHANGELOG,v 1.2 1998/08/20 15:16:49 tsarna Exp $
 
 TODO
 	- report line# for each errors/warnings in Makefile
 	  (need a complete rewrite)
 
 ---
+r1.73 Thu Jul  8 10:43:03 BST 1999
+	- Recognise patches of the form: "patches/patch-*", rather
+	  than "patches/patch-??", to mirror bsd.pkg.mk's recognition.
 
 r1.66 Thu Aug 20 09:00:51 CDT 1998
 	- Add support for HOMEPAGE
